Update README with current architecture and admin unlock sequence
Agent-Logs-Url: https://github.com/advaitkj123/IntelliMatchX/sessions/2126458f-878d-4c41-aa42-6bdbae31112f

Co-authored-by: TANAYCHORDIA <109026465+TANAYCHORDIA@users.noreply.github.com>